feat: Navigation 설정 - Bottom Navigation Bar - NavHost - NavigateExtension

--- a/market/src/main/res/values/strings.xml
+++ b/market/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Market</string>
+
+    <string name="bottom_nav_home">홈</string>
+    <string name="bottom_nav_interest">관심</string>
+    <string name="bottom_nav_profile">프로필</string>
+    <string name="bottom_nav_basket">장바구니</string>
+
 </resources>
