--- a/market/src/main/res/values/strings.xml
+++ b/market/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Market</string>
 
     <string name="bottom_nav_home">홈</string>
-    <string name="bottom_nav_interest">관심</string>
+    <string name="bottom_nav_category">카테고리</string>
     <string name="bottom_nav_profile">프로필</string>
     <string name="bottom_nav_basket">장바구니</string>
 
