--- a/market/src/main/res/values/strings.xml
+++ b/market/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="bottom_nav_home">홈</string>
     <string name="bottom_nav_category">카테고리</string>
     <string name="bottom_nav_profile">프로필</string>
-    <string name="bottom_nav_basket">장바구니</string>
+    <string name="bottom_nav_budget">예산</string>
 
 </resources>
