--- a/market/src/main/res/values/strings.xml
+++ b/market/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="bottom_nav_category">카테고리</string>
     <string name="bottom_nav_profile">프로필</string>
     <string name="bottom_nav_budget">예산</string>
+    
+    <string name="category_tab_label">분류</string>
 
 </resources>
