--- a/market/src/main/res/values/strings.xml
+++ b/market/src/main/res/values/strings.xml
@@ -5,7 +5,12 @@
     <string name="bottom_nav_category">카테고리</string>
     <string name="bottom_nav_profile">프로필</string>
     <string name="bottom_nav_budget">예산</string>
-    
+
+    <string name="budget_tab_label">금액</string>
     <string name="category_tab_label">분류</string>
+    <string name="memo_tab_label">메모</string>
+
+    <string name="budget_type_income">수입</string>
+    <string name="budget_type_expense">지출</string>
 
 </resources>
