--- a/market/src/main/res/values/strings.xml
+++ b/market/src/main/res/values/strings.xml
@@ -1,10 +1,18 @@
 <resources>
     <string name="app_name">Market</string>
 
+    <string name="year">년</string>
+    <string name="month">월</string>
+    <string name="day">일</string>
+
     <string name="bottom_nav_home">홈</string>
     <string name="bottom_nav_category">카테고리</string>
     <string name="bottom_nav_profile">프로필</string>
     <string name="bottom_nav_budget">예산</string>
+
+    <string name="year_month_picker_title">날짜</string>
+    <string name="year_month_picker_today">이번달</string>
+
 
     <string name="budget_tab_label">금액</string>
     <string name="category_tab_label">분류</string>
@@ -20,5 +28,9 @@
     <string name="budget_screen_type_daily">하루별</string>
     <string name="budget_screen_type_monthly">월별</string>
     <string name="budget_screen_type_calendar">달력</string>
+
+    <string name="budget_screen_calculated_row_income">수입</string>
+    <string name="budget_screen_calculated_row_expense">지출</string>
+    <string name="budget_screen_calculated_row_total">합계</string>
 
 </resources>
